##################################################
 Revision history for Log::Log4perl
##################################################

1.42 (not yet released)
   *    (ms) BenRifkah Bergsten-Buret added ';!' for property configurator
             comment delimiters:
             https://github.com/mschilli/log4perl/issues/25

1.41 (2013/04/21)
   *    (ms) [rt 81731] Added 'trace' level to Log4perl::Catalyst, as
             suggested by Ashley Pond.
   *    (ms) Alexander Hartmaier added Log::Log4perl::Filter::MDC to filter 
             based on MDC key/value
   *    (ms) [rt.cpan.org 83193] The file appender now ignores owner/group 
             settings on all types of existing file system entries (previously,
             this was only the case for actual files).
   *    (ms) [rt.cpan.org 84289] Documented Level.pm's isGreaterOrEqual()
             comparator.
   *    (ms) [rt.cpan.org #84725] Fixed test suite to allow running tests 
             in parallel via HARNESS_OPTIONS=j10:c HARNESS_TIMER=1. 
             Reported by Brendan Byrd.

1.40 (2012/11/30)
   *    (ms) Denis Ibaev added support for DBI appender attributes.
   *    (ms) Chris Weyl put in a workaround for a DBD::CSV bug that
             tripped our test suite.
   *    (ms) Tim Bunce provided a patch using Carp::confess() instead of die()
             on the "Root Logger not initialized" message which pops up
             during global construction to make it easier to find the 
             offending code.
   *    (ms) Cygwin masks MSWin32-ishness by setting $^O to "cygwin" and not
             to "Win32". Modified check to catch both.
   *    (ms) Fixed unescaped brace in regex that perl 5.17.4 was complaining 
             about.

1.39 (2012/10/27)
   *    (ms) Markus Benning reported that logcroak/confess/die stringify
             their arguments, which gets in the way when throwing data
             structures as exceptions. Added flag $STRINGIFY_DIE_MESSAGE.